--- a/webroot/css/admin.css
+++ b/webroot/css/admin.css
@@ -4,11 +4,16 @@
 
 .box-placeholder {
 	border: 2px dotted black;
-	margin: 0 1em 1em 0;
-	height: 50px;
+	margin: 10px;
 	background: #efefef;
 }
 
-.sortable-column {
-	min-height: 50px;
+.sorting {
+	margin-bottom: 5px;
+	border: 1px dashed #444;
+	min-height: 100px !important;
+}
+
+.sorting .box {
+	margin: 10px;
 }
